--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-schedule": "^2.1.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
